[package]
name = "pin-bot"
version = "1.0.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
figment = { version = "0.10", features = [ "env", "json", "yaml" ] }
futures-util = "0.3"
hyper = { version = "0.14", features = [ "server" ] }
parking_lot = "0.12"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "json", "parking_lot", "registry", "env-filter" ] }
twilight-gateway = "0.14"
twilight-http = "0.14"
twilight-http-ratelimiting = "0.14"
twilight-model = "0.14"
twilight-util = { version = "0.14", features = [ "builder" ] }
twilight-validate = "0.14"